--- a/car_test/car_test.csproj
+++ b/car_test/car_test.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="jQuery" Version="3.6.1" />
+    <PackageReference Include="jQuery.BlockUI" Version="2.70.0" />
     <PackageReference Include="jQuery.UI.Combined" Version="1.13.2" />
     <PackageReference Include="MySql.Data" Version="8.0.31" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
